--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -62,11 +62,11 @@
 	z-index: 1;
 	flex: 1;
 	padding: 0.75rem 1.5rem;
-	color: $dark-color;
 	cursor: pointer;
 	font-weight: 600;
 	letter-spacing: 1px;
 	text-align: center;
+	color: $primary-color;
 
 	&:hover {
 		color: $primary-color;
@@ -97,18 +97,42 @@
 .gallery-item {
 	box-shadow: 0 10px 10px 1px rgba($color: #000000, $alpha: 0.1);
 	border-radius: $border-radius-general;
+	aspect-ratio: 3/4;
+	position: relative;
+
+	&::after {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: linear-gradient(to bottom, transparent, $primary-color 90%);
+		border-radius: $border-radius-general;
+		z-index: 1;
+		transition: all 0.2s ease-out;
+	}
 
 	.gallery-image {
 		border-radius: $border-radius-general;
 		width: 100%;
-		height: 300px;
+		height: 100%;
 		object-fit: cover;
 		display: block;
 	}
 
 	&:hover {
-		.gallery-image {
-			transform: scale(1.05);
-		}
+		transform: scale(1.05);
+	}
+
+	.gallery-item-name {
+		position: absolute;
+		color: $secondary-color;
+		left: 50%;
+		transform: translateX(-50%);
+		bottom: 2%;
+		font-size: 1.3rem;
+		z-index: 2;
+		width: 100%;
 	}
 }
