--- a/style/style.css
+++ b/style/style.css
@@ -614,11 +614,11 @@ section {
   z-index: 1;
   flex: 1;
   padding: 0.75rem 1.5rem;
-  color: #19181f;
   cursor: pointer;
   font-weight: 600;
   letter-spacing: 1px;
   text-align: center;
+  color: #ff5d8f;
 }
 .tab-label:hover {
   color: #ff5d8f;
@@ -648,16 +648,40 @@ section {
 .gallery-item {
   box-shadow: 0 10px 10px 1px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
+  aspect-ratio: 3/4;
+  position: relative;
+}
+.gallery-item::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, transparent, #ff5d8f 90%);
+  border-radius: 12px;
+  z-index: 1;
+  transition: all 0.2s ease-out;
 }
 .gallery-item .gallery-image {
   border-radius: 12px;
   width: 100%;
-  height: 300px;
+  height: 100%;
   object-fit: cover;
   display: block;
 }
-.gallery-item:hover .gallery-image {
+.gallery-item:hover {
   transform: scale(1.05);
+}
+.gallery-item .gallery-item-name {
+  position: absolute;
+  color: #f8f5f2;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 2%;
+  font-size: 1.3rem;
+  z-index: 2;
+  width: 100%;
 }
 
 .footer {
