--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -107,7 +107,7 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: linear-gradient(to bottom, transparent, $primary-color 90%);
+		background: linear-gradient(to bottom, transparent 60%, $primary-color 90%);
 		border-radius: $border-radius-general;
 		z-index: 1;
 		transition: all 0.2s ease-out;
