--- a/style/style.css
+++ b/style/style.css
@@ -658,7 +658,7 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, transparent, #ff5d8f 90%);
+  background: linear-gradient(to bottom, transparent 60%, #ff5d8f 90%);
   border-radius: 12px;
   z-index: 1;
   transition: all 0.2s ease-out;
