--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -1,4 +1,4 @@
-.gallery-container {
+.gallery-section {
 	padding: 2rem;
 	max-width: 1000px;
 	margin: 0 auto;
@@ -8,7 +8,7 @@
 
 	.section-title,
 	.section-subtitle {
-		color: $dark-color;
+		color: $primary-color;
 	}
 
 	.section-subtitle {
@@ -16,75 +16,6 @@
 		margin: 0 auto 3rem;
 		font-family: "Poppins";
 	}
-}
-
-.tabs-container {
-	margin-bottom: 3rem;
-}
-
-.tab-input {
-	display: none;
-}
-
-.tab-labels {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	margin-bottom: 2rem;
-	border: 2px solid $primary-color;
-	border-radius: $border-radius-rounded;
-	overflow: hidden;
-	max-width: 450px;
-	margin-inline: auto;
-
-	&::before {
-		content: "";
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 50%;
-		height: 100%;
-		background: $primary-color;
-		transition: transform 0.3s ease;
-		z-index: 0;
-		transform: translateX(0);
-	}
-
-	#otros-tab:checked ~ & {
-		&::before {
-			transform: translateX(100%);
-		}
-	}
-}
-
-.tab-label {
-	position: relative;
-	z-index: 1;
-	flex: 1;
-	padding: 0.75rem 1.5rem;
-	cursor: pointer;
-	font-weight: 600;
-	letter-spacing: 1px;
-	text-align: center;
-	color: $primary-color;
-
-	&:hover {
-		color: $primary-color;
-	}
-}
-
-#dresses-tab:checked ~ .tab-labels label[for="dresses-tab"],
-#otros-tab:checked ~ .tab-labels label[for="otros-tab"] {
-	color: $secondary-color;
-}
-
-.tab-content {
-	display: none;
-}
-
-#dresses-tab:checked ~ .tab-contents .tab-content:nth-of-type(1),
-#otros-tab:checked ~ .tab-contents .tab-content:nth-of-type(2) {
-	display: block;
 }
 
 .gallery-grid {
@@ -99,6 +30,7 @@
 	border-radius: $border-radius-general;
 	aspect-ratio: 3/4;
 	position: relative;
+	overflow: hidden;
 
 	&::after {
 		content: "";
@@ -134,5 +66,20 @@
 		font-size: 1.3rem;
 		z-index: 2;
 		width: 100%;
+	}
+}
+
+.btn {
+	padding: 0.6rem 1.2rem;
+	border-radius: $border-radius-rounded;
+	background-color: $primary-color;
+	color: $light-color;
+	border: none;
+	cursor: pointer;
+	font-weight: 600;
+	transition: 0.2s;
+
+	&:hover {
+		transform: scale(1.02);
 	}
 }
