--- a/style/style.css
+++ b/style/style.css
@@ -556,7 +556,7 @@ section {
   text-wrap: nowrap;
 }
 
-.gallery-container {
+.gallery-section {
   padding: 2rem;
   max-width: 1000px;
   margin: 0 auto;
@@ -564,78 +564,14 @@ section {
   border-top: solid 1px rgba(255, 93, 143, 0.4);
   padding-top: 3rem;
 }
-.gallery-container .section-title,
-.gallery-container .section-subtitle {
-  color: #19181f;
+.gallery-section .section-title,
+.gallery-section .section-subtitle {
+  color: #ff5d8f;
 }
-.gallery-container .section-subtitle {
+.gallery-section .section-subtitle {
   max-width: 600px;
   margin: 0 auto 3rem;
   font-family: "Poppins";
-}
-
-.tabs-container {
-  margin-bottom: 3rem;
-}
-
-.tab-input {
-  display: none;
-}
-
-.tab-labels {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 2rem;
-  border: 2px solid #ff5d8f;
-  border-radius: 100px;
-  overflow: hidden;
-  max-width: 450px;
-  margin-inline: auto;
-}
-.tab-labels::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  background: #ff5d8f;
-  transition: transform 0.3s ease;
-  z-index: 0;
-  transform: translateX(0);
-}
-#otros-tab:checked ~ .tab-labels::before {
-  transform: translateX(100%);
-}
-
-.tab-label {
-  position: relative;
-  z-index: 1;
-  flex: 1;
-  padding: 0.75rem 1.5rem;
-  cursor: pointer;
-  font-weight: 600;
-  letter-spacing: 1px;
-  text-align: center;
-  color: #ff5d8f;
-}
-.tab-label:hover {
-  color: #ff5d8f;
-}
-
-#dresses-tab:checked ~ .tab-labels label[for=dresses-tab],
-#otros-tab:checked ~ .tab-labels label[for=otros-tab] {
-  color: #f8f5f2;
-}
-
-.tab-content {
-  display: none;
-}
-
-#dresses-tab:checked ~ .tab-contents .tab-content:nth-of-type(1),
-#otros-tab:checked ~ .tab-contents .tab-content:nth-of-type(2) {
-  display: block;
 }
 
 .gallery-grid {
@@ -650,6 +586,7 @@ section {
   border-radius: 12px;
   aspect-ratio: 3/4;
   position: relative;
+  overflow: hidden;
 }
 .gallery-item::after {
   content: "";
@@ -682,6 +619,20 @@ section {
   font-size: 1.3rem;
   z-index: 2;
   width: 100%;
+}
+
+.btn, .error-button {
+  padding: 0.6rem 1.2rem;
+  border-radius: 100px;
+  background-color: #ff5d8f;
+  color: #fbf4f6;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  transition: 0.2s;
+}
+.btn:hover, .error-button:hover {
+  transform: scale(1.02);
 }
 
 .footer {
